# vehicle-speed-simulation-system

./: .gitignore  LICENSE  README.md
flutter-app/: .gitignore  README.md  pubspec.yaml
flutter-app/android/app/: build.gradle  build.gradle.kts
flutter-app/android/app/src/main/: AndroidManifest.xml
flutter-app/android/app/src/main/kotlin/com/example/vehicle_speed_monitor/: MainActivity.kt
flutter-app/ios/Runner/: Info.plist
flutter-app/ios/Runner.xcodeproj/: project.pbxproj
flutter-app/lib/: main.dart
flutter-app/lib/core/: app.dart
flutter-app/lib/features/chat/presentation/pages/: chat_page.dart
flutter-app/lib/features/home/presentation/pages/: home_page.dart
flutter-app/lib/features/mqtt_speed/presentation/pages/: mqtt_speed_page.dart
qt-app/: .gitignore  CMakeLists.txt  LICENSE  README.md
qt-app/include/controllers/: SpeedController.h  VehicleController.h
qt-app/include/core/: Application.h  GameEngine.h  Settings.h
qt-app/include/models/: SpeedModel.h  VehicleModel.h
qt-app/include/utils/: DataProcessor.h  Logger.h  MqttService.h  SpeedReportingService.h
qt-app/include/views/: ControlPanel.h  GameView.h  MainWindow.h  SpeedDisplay.h
qt-app/resources/: QT_LGPL_NOTICE.txt  resources.qrc
qt-app/scripts/: build.bat
qt-app/src/: main.cpp  mainwindow.cpp
qt-app/src/core/: GameEngine.cpp
qt-app/src/models/: VehicleModel.cpp
qt-app/src/utils/: SpeedReportingService.cpp
qt-app/src/views/: ControlPanel.cpp  GameView.cpp  MainWindow.cpp
qt-app/ui/: mainwindow.ui
